[gd_scene load_steps=5 format=2]

[ext_resource path="res://Game/Died.gd" type="Script" id=1]
[ext_resource path="res://UI/UiTheme.tres" type="Theme" id=2]
[ext_resource path="res://UI/UiTheme2.tres" type="Theme" id=3]
[ext_resource path="res://Textures/panelbg.png" type="Texture" id=4]

[node name="Died" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -558.0
margin_top = -392.0
margin_right = 558.0
margin_bottom = 501.0
texture = ExtResource( 4 )
region_rect = Rect2( 20, -10, 990, 700 )

[node name="quit" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -361.0
margin_top = 69.0
margin_right = 361.0
margin_bottom = 173.0
focus_mode = 0
theme = ExtResource( 2 )
action_mode = 0
enabled_focus_mode = 0
text = "quit"

[node name="replay" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -76.0
margin_top = 220.0
margin_right = 76.0
margin_bottom = 277.0
focus_mode = 0
theme = ExtResource( 3 )
enabled_focus_mode = 0
text = "retry"

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -117.0
margin_top = -28.0
margin_right = 103.0
margin_bottom = 30.0
theme = ExtResource( 2 )
text = "\"88:88:888\""
align = 1
valign = 1

[node name="Label2" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -431.0
margin_top = 200.0
margin_right = 431.0
margin_bottom = 424.0
theme = ExtResource( 3 )
text = "Dutch:1, Dodo:0"
align = 1
valign = 1

[connection signal="pressed" from="quit" to="." method="quit_pressed"]
[connection signal="pressed" from="replay" to="." method="replay_pressed"]
